base style library

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,3 +1,7 @@
+@charset "utf-8";
+@import "~bulma/bulma";
+@import "~bulma-carousel/dist/css/bulma-carousel";
+
 // color base
 $primary: #136966;
 $secondary: #1A9A8B;
