--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -247,6 +247,50 @@ img {
   }
 }
 
+.time {
+  opacity: 0.5;
+  p {
+    color: #136966;
+    font-size: 48px;
+    font-weight: 300px;
+    font-weight: 900;
+  }      
+}
+
+.test {
+  color: white;
+  text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-auto-rows: 50px;
+  grid-gap: 50px;
+  margin-left:20px;
+}
+
+.text {
+  font-family: "Avenir Next";
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  color: #ffff;
+  border-radius: 3px;
+  font-weight: 500;
+  padding-top: 15px;
+  margin-top: 15px;
+}
+
+.grid > div:nth-child(1) { grid-column: 1 / 2; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(2) { grid-column: 1 / 2; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(3) { grid-column: 2 / 3; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(4) { grid-column: 2 / 3; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(5) { grid-column: 3 / 4; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(6) { grid-column: 3 / 4; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(7) { grid-column: 4 / 5; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(8) { grid-column: 4 / 5; grid-row: 1; z-index: 0; }
+
 // icon link styles
 
 a > .fab {
