--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,56 +1,8 @@
 @charset "utf-8";
 @import "~bulma/bulma";
 @import "~bulma-carousel/dist/css/bulma-carousel";
-
-// color base
-$primary: #136966;
-$secondary: #1A9A8B;
-$tertiary: #8C2425;
-$tertiary-rgba: rgba(140,36,37,0.63);
-$quaternary: #E9262C;
-$quinary: #1E0D1F;
-$quinary-rgba: rgba(30,13,31,1);
-$senary: #ffff;
-
-// reusable values
-$none: none;
-$spacer-height: 10vh;
-$font-family: 'Poppins', sans-serif;
-
-@mixin display-flex($align, $justify, $direction) {
-  display: flex;
-  align-items: $align;
-  justify-content: $justify;
-  flex-direction: $direction;
-}
-
-@mixin box-shadow($cast){
-  @if $cast == 'negative' {
-    -webkit-box-shadow: 6px 8px 34px -11px $tertiary-rgba;
-    -moz-box-shadow: 6px 8px 34px -11px $tertiary-rgba;
-    box-shadow: 6px 8px 34px -11px $tertiary-rgba;
-  } @else {
-    -webkit-box-shadow: 6px 8px 34px -11px $quinary-rgba;
-    -moz-box-shadow: 6px 8px 34px -11px $quinary-rgba;
-    box-shadow: 6px 8px 34px -11px $quinary-rgba;
-  }
-}
-
-@mixin box-shadow-inset($cast){
-  @if $cast == 'negative' {
-    -webkit-box-shadow: inset 6px 8px 34px -11px $tertiary-rgba;
-    -moz-box-shadow: inset 6px 8px 34px -11px $tertiary-rgba;
-    box-shadow: inset 6px 8px 34px -11px $tertiary-rgba;
-  } @else {
-    -webkit-box-shadow: inset 6px 8px 34px -11px $quinary-rgba;
-    -moz-box-shadow: inset 6px 8px 34px -11px $quinary-rgba;
-    box-shadow: inset 6px 8px 34px -11px $quinary-rgba;
-  }
-}
-
-@mixin bottom-border() {
-  border-bottom: 1px $quinary solid;
-}
+@import "./globalVars.scss";
+@import "./mixinIndex.scss";
 
 body {
   color: $senary;
@@ -74,7 +26,7 @@ img {
   background-repeat: no-repeat;
   height: 800px;
   .potm-navbar {
-    font-family: $font-family;
+    font-family: $poppins-font-family;
     color: $senary;
     width: 100%;
     @include display-flex(center, space-between, row);
@@ -85,12 +37,12 @@ img {
   .potm-ul-top-nav {
     list-style: none;
     padding-right: .8rem;
-    font-family: $font-family;
+    font-family: $poppins-font-family;
     @include display-flex(center, space-between, row);
     a {
       color: $senary;
       text-decoration: none;
-      font-family: $font-family;
+      font-family: $poppins-font-family;
       padding: .5rem;
       font-size: 2.8vh;
     }
@@ -98,7 +50,7 @@ img {
 }
 
 .potm-section-content-header {
-  font-family: $font-family;
+  font-family: $poppins-font-family;
   font-size: 2.6vh;
   color: $senary;
   color: #000000;
@@ -114,8 +66,8 @@ img {
   }
 
   #potm-counter {
-    color: rgba(26,154,139,0.64);
-    font-family: $font-family;
+    color: $primary-rgba;
+    font-family: $poppins-font-family;
     width: 74px;
     height: 89px;
     font-size: 59px;
@@ -196,7 +148,7 @@ img {
 }
 
 .potm-section-content-articles {
-  font-family: $font-family;
+  font-family: $poppins-font-family;
   font-size: 2.6vh;
   background-color: #000000;
   color: #ffffff;
@@ -204,7 +156,7 @@ img {
 }
 
 .potm-section-content-events{
-  font-family: $font-family;
+  font-family: $poppins-font-family;
   font-size: 2.6vh;
   background-image: url("../images/greg-rakozy-38802-unsplash.jpg");
   color: #ffffff;
@@ -214,7 +166,7 @@ img {
 }
 
 .potm-section-content-speakers{
-  font-family: $font-family;
+  font-family: $poppins-font-family;
   font-size: 2.6vh;
   background-image: url("../images/nathan-anderson-313342-unsplash.jpg");
   color: #ffffff;
@@ -226,7 +178,7 @@ img {
 // footer height cannot be stored as a variable
 // it gets evaled to late
 .potm-footer {
-  font-family: $font-family;
+  font-family: $poppins-font-family;
   @include display-flex(center, center, row);
   -webkit-box-shadow: 2px -11px 11px -13px $quinary-rgba;
   -moz-box-shadow: 2px -11px 11px -13px $quinary-rgba;
@@ -262,12 +214,20 @@ img {
   text-align: center;
 }
 
-.grid {
+.potm-counter-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 1fr);
   grid-auto-rows: 50px;
   grid-gap: 50px;
   margin-left:20px;
+  div:nth-child(1) { grid-column: 1 / 2; grid-row: 1; z-index: 0; }
+  div:nth-child(2) { grid-column: 1 / 2; grid-row: 1; z-index: 1; }
+  div:nth-child(3) { grid-column: 2 / 3; grid-row: 1; z-index: 0; }
+  div:nth-child(4) { grid-column: 2 / 3; grid-row: 1; z-index: 1; }
+  div:nth-child(5) { grid-column: 3 / 4; grid-row: 1; z-index: 0; }
+  div:nth-child(6) { grid-column: 3 / 4; grid-row: 1; z-index: 1; }
+  div:nth-child(7) { grid-column: 4 / 5; grid-row: 1; z-index: 0; }
+  div:nth-child(8) { grid-column: 4 / 5; grid-row: 1; z-index: 1; }
 }
 
 .text {
@@ -282,14 +242,14 @@ img {
   margin-top: 15px;
 }
 
-.grid > div:nth-child(1) { grid-column: 1 / 2; grid-row: 1; z-index: 1; }
-.grid > div:nth-child(2) { grid-column: 1 / 2; grid-row: 1; z-index: 0; }
-.grid > div:nth-child(3) { grid-column: 2 / 3; grid-row: 1; z-index: 1; }
-.grid > div:nth-child(4) { grid-column: 2 / 3; grid-row: 1; z-index: 0; }
-.grid > div:nth-child(5) { grid-column: 3 / 4; grid-row: 1; z-index: 1; }
-.grid > div:nth-child(6) { grid-column: 3 / 4; grid-row: 1; z-index: 0; }
-.grid > div:nth-child(7) { grid-column: 4 / 5; grid-row: 1; z-index: 1; }
-.grid > div:nth-child(8) { grid-column: 4 / 5; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(1) { grid-column: 1 / 2; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(2) { grid-column: 1 / 2; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(3) { grid-column: 2 / 3; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(4) { grid-column: 2 / 3; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(5) { grid-column: 3 / 4; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(6) { grid-column: 3 / 4; grid-row: 1; z-index: 1; }
+.grid > div:nth-child(7) { grid-column: 4 / 5; grid-row: 1; z-index: 0; }
+.grid > div:nth-child(8) { grid-column: 4 / 5; grid-row: 1; z-index: 1; }
 
 // icon link styles
 
