thats as close as I'm going to get at the moment.  Also refactored stylesheets so that things weren't as claustrophic

--- a/src/stylesheets/globalVars.scss
+++ b/src/stylesheets/globalVars.scss
@@ -8,7 +8,8 @@ $tertiary-rgba: rgba(140,36,37,0.63);
 $quaternary: #E9262C;
 $quinary: #1E0D1F;
 $quinary-rgba: rgba(30,13,31,1);
-$senary: #ffff;
+$senary: #fff;
+$black: #000000;
 
 // Reusable values
 $none: none;
