added shadows to the main POTM, removed the opacity from .potm-counter-time on line 23 and replaced color:  with color: -rgba to reflect the  opacity from the mock-up.

--- a/src/stylesheets/counter.scss
+++ b/src/stylesheets/counter.scss
@@ -20,9 +20,8 @@
 }
 
 .potm-counter-time {
-  opacity: 0.5;
   p {
-    color: $primary;
+    color: $primary-rgba;
     font-size: 48px;
     font-weight: 300px;
     font-weight: 900;
