setup listeners for contact form, got lost in patterns for awhile

--- a/src/stylesheets/globalVars.scss
+++ b/src/stylesheets/globalVars.scss
@@ -18,3 +18,8 @@ $spacer-height: 10vh;
 // Fonts
 $poppins-font-family: "Poppins", sans-serif;
 $avenir-next-font-family: "Avenir Next", courier;
+
+// Paths
+$bg-content-events: "../images/events-unsplash.jpg";
+$bg-content-speakers: "../images/speakers-unsplash.jpg";
+$bg-header: "../images/header.jpg";
