made the image of the woman the background for the carousel, now only the text moves.

--- a/src/stylesheets/globalVars.scss
+++ b/src/stylesheets/globalVars.scss
@@ -20,6 +20,7 @@ $poppins-font-family: "Poppins", sans-serif;
 $avenir-next-font-family: "Avenir Next", courier;
 
 // Paths
+$bg-content-slider: "../images/woman.png";
 $bg-content-events: "../images/events-unsplash.jpg";
 $bg-content-speakers: "../images/speakers-unsplash.jpg";
 $bg-header: "../images/header.jpg";
