--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -22,7 +22,7 @@ body {
 img {
   height: 50px;
   width: 50px;
-  background-color: $quinary-rgba;
+  // background-color: $quinary-rgba;
 }
 
 .potm-hide {
