--- a/src/stylesheets/section.scss
+++ b/src/stylesheets/section.scss
@@ -4,16 +4,39 @@
  }
  
  .potm-section-content-slider {
-   height: 643px;
+   height: 793px;
+   background-image: url('../images/woman.png');
+   background-repeat: no-repeat;
+   background-position: center right;
+   .carousel-item{
+     margin-top: 350px;
+     margin-left: 25px
+   }
+   .potm-scs-text1{
+     text-align: left;
+     color: $secondary;
+     font-family: $poppins-font-family;
+     font-size: 20px;
+   }
+   .potm-scs-text2{
+     text-align: left;
+     color: $senary;
+     font-family: $poppins-font-family;
+     font-size: 16px;
+   }
+   .potm-scs-text3{
+     text-align: left;
+     color: $senary;
+     font-family: $poppins-font-family;
+     font-size: 40px;
+   }
  }
- 
  
  .potm-section-content-articles {
    font-family: $poppins-font-family;
    font-size: 2.6vh;
    background-color: $black;
-   color: $senary;
-   height: 642px;
+   height: 492px;
  }
  
  .potm-section-content-events{
