--- a/src/stylesheets/mixinIndex.scss
+++ b/src/stylesheets/mixinIndex.scss
@@ -13,7 +13,7 @@
 
 // Repeated process for content sections
 // $image-path is a string, the path for the background image
-@mixin ptom-section-content($image-path) {
+@mixin potm-section-content($image-path) {
   font-family: $poppins-font-family;
   font-size: 2.6vh;
   background-image: url($image-path);
