--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -49,7 +49,7 @@
       border-color: rgba(255,255,255,0.5);
     }
   }
-  .stroke-187 {	
+  .potm-down-arrow {	
     box-sizing: border-box;
     height: 1rem;
     width: 1rem;
