--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -11,6 +11,7 @@
 @import "./counter.scss";
 @import "./section.scss";
 @import "./footer.scss";
+@import "./about.scss";
 
 body {
   color: $senary;
